<resources>
    <string name="app_name">SportAppMADE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_sport">Sport</string>
    <string name="menu_player">Player</string>
    <string name="menu_favorite_player">Favorite Player</string>
    <string name="sport_format">Format : %1$s</string>
    <string name="data_empty">Data is empty!</string>
    <string name="data_not_display">Sorry… player is not found!</string>
    <string name="player_search">Please search your favorite player!</string>
    <string name="input_message">Input your search player in text field!</string>
    <string name="sport_description">Description</string>
    <string name="player_name">Player Name</string>
    <string name="sport_name">Sport : </string>
    <string name="team">Team :</string>
    <string name="input_player">Input player…</string>
    <string name="search">Search</string>
    <string name="athlete">Sport %1$s</string>
    <string name="position">Position :</string>
    <string name="nationality">Nationality :</string>
    <string name="birth">Birth :</string>
    <string name="birth_data">%1$s, %2$s</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="description">Description</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="favorite_fab">Favorite FAB</string>
    <string name="title_favorite_player">FavoritePlayer</string>
</resources>